--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "vinyl-source-stream": "^1.1.0"
   },
   "dependencies": {
-    "node-sass": "^4.7.1"
+    "node-sass": "^4.7.1",
+    "react-custom-scrollbars": "^4.2.1"
   }
 }
