--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
   },
   "dependencies": {
     "node-sass": "^4.7.1",
-    "react-custom-scrollbars": "^4.2.1"
+    "react-anchor-link-smooth-scroll": "^1.0.5",
+    "react-custom-scrollbars": "^4.2.1",
+    "react-scroll": "^1.7.7"
   }
 }
